objects/completeLogin__c.object
<CustomObject>
    <description>public static final String KEY_ORG_NAME = &quot;orgname&quot;;
    public static final String KEY_URL = &quot;loginScreenURL&quot;;
    public static final String KEY_COUNTRY = &quot;country&quot;;
    public static final String KEY_JOB_TITLE = &quot;jobtitle&quot;;
    public static final String KEY_ORGANISATION = &quot;organisation&quot;;
    public static final String KEY_USER_NAME = &quot;email&quot;;
    public static final String KEY_FIRST_NAME = &quot;firstname lastname&quot;;
    public static final String KEY_AGENT_ID = &quot;agentid&quot;;</description>
    <fields>
        <fullName>AgentID__c</fullName>
        <label>AgentID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstLastName__c</fullName>
        <label>FirstLastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginScreenURL__c</fullName>
        <label>LoginScreenURL</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgName__c</fullName>
        <description>String ORGNAME</description>
        <label>OrgName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserEmail__c</fullName>
        <label>UserEmail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CompleteLoginData</label>
    <nameField>
        <label>completeLogin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CompleteLoginDatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>